logs/redtorch.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redtorch'...
Listing './lib/python3.5/site-packages/redtorch/api'...
Listing './lib/python3.5/site-packages/redtorch/api/ctp'...
Listing './lib/python3.5/site-packages/redtorch/event'...
Listing './lib/python3.5/site-packages/redtorch/trader'...
Listing './lib/python3.5/site-packages/redtorch/trader/app'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy'...
Compiling './lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/ctaBacktesting.py'...
***   File "./lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/ctaBacktesting.py", line 115
    print str(datetime.now()) + "\t" + content
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/ctaHistoryData.py'...
***   File "./lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/ctaHistoryData.py", line 26
    print u'开始下载%s日行情' %symbol
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/datayesClient.py'...
***   File "./lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/datayesClient.py", line 38
    print u'%s无法打开配置文件' % self.name
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/language'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/language/chinese'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/language/english'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/strategy'...
Compiling './lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/strategy/__init__.py'...
***   File "./lib/python3.5/site-packages/redtorch/trader/app/ctaStrategy/strategy/__init__.py", line 26
    print '-' * 20
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/redtorch/trader/app/dataRecorder'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/dataRecorder/language'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/dataRecorder/language/chinese'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/dataRecorder/language/english'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/riskManager'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/riskManager/language'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/riskManager/language/chinese'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/riskManager/language/english'...
Listing './lib/python3.5/site-packages/redtorch/trader/app/spreadTrading'...
Listing './lib/python3.5/site-packages/redtorch/trader/gateway'...
Listing './lib/python3.5/site-packages/redtorch/trader/gateway/dynamicCtpGateway'...
Listing './lib/python3.5/site-packages/redtorch/trader/gateway/dynamicCtpGateway/language'...
Listing './lib/python3.5/site-packages/redtorch/trader/gateway/dynamicCtpGateway/language/chinese'...
Listing './lib/python3.5/site-packages/redtorch/trader/gateway/dynamicCtpGateway/language/english'...
Listing './lib/python3.5/site-packages/redtorch/trader/ico'...
Listing './lib/python3.5/site-packages/redtorch/trader/language'...
Listing './lib/python3.5/site-packages/redtorch/trader/language/chinese'...
Listing './lib/python3.5/site-packages/redtorch/trader/language/english'...
Listing './lib/python3.5/site-packages/redtorch/trader/temp'...
Compiling './lib/python3.5/site-packages/redtorch/trader/vtEngine.py'...
***   File "./lib/python3.5/site-packages/redtorch/trader/vtEngine.py", line 754
    print self.vtSymbol, '-'*30
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/redtorch-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
